--- a/css/style.css
+++ b/css/style.css
@@ -110,8 +110,8 @@ p {
 
 @media(max-width:768px) {
     .navbar img{
-        height: 40%;
-        width: 40%;
+        height: 20%;
+        width: 20%;
         position: relative;
         vertical-align: center;
     }
@@ -196,17 +196,13 @@ p {
         width: 60%;
         height: 120px;
         margin: 15px 0 10px 15px;
+        text-align: center;
     } 
-    
-    .header .btn {
-        
-        font-size: 10px;
-        margin-left: 20px;
-    }
     
     .header h1 {
         
         font-size: 16px;
+        text-align: center;
     }
     
 }
